added publish profile

--- a/src/Flexy.API/Flexy.API.csproj
+++ b/src/Flexy.API/Flexy.API.csproj
@@ -31,4 +31,8 @@
     <None Include="wwwroot\dist\bundle.js.map" />
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="npm install &amp;&amp; npm run dev" />
+  </Target>
+
 </Project>
