--- a/src/Flexy.API/package.json
+++ b/src/Flexy.API/package.json
@@ -5,12 +5,16 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.24.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^8.2.5",
     "element-ui": "^2.15.6",
+    "html-webpack-plugin": "^5.5.0",
     "install": "^0.13.0",
     "npm": "^8.3.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
-    "vue-style-loader": "^4.1.3"
+    "vue-style-loader": "^4.1.3",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
