--- a/src/Flexy.API/package.json
+++ b/src/Flexy.API/package.json
@@ -11,6 +11,7 @@
     "html-webpack-plugin": "^5.5.0",
     "install": "^0.13.0",
     "npm": "^8.3.0",
+    "vee-validate": "^2.2.8",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
     "vue-style-loader": "^4.1.3",
