--- a/src/Flexy.API/package.json
+++ b/src/Flexy.API/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.0",
     "clean-webpack-plugin": "^4.0.0",
+    "element-theme-dark": "^1.0.3",
     "mini-css-extract-plugin": "^2.4.5",
     "node-sass": "^7.0.0",
     "postcss-loader": "^6.2.1",
